k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: learning-app
  namespace: learn
spec:
  selector:
    app: learning-app
  ports:
    - port: 80
      targetPort: 3000
