k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: learning-app
  namespace: learn
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: learn.napskytech.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: learning-app
                port:
                  number: 80
  tls:
    - hosts:
        - learn.napskytech.com
      secretName: learning-tls
